# appframework

./: .gitignore  changelog.md  meson.build  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: meson.yml
include/: appframework.hpp
include/apf/: all.hpp  args.hpp  color.hpp  common.hpp  logs.hpp  process.hpp  term.hpp  tree.hpp  vector.hpp  version.hpp
src/: appframework.cpp  appframework.hpp  appframework_common.hpp  appframework_files.cpp  appframework_files.hpp  appframework_ini.cpp  appframework_ini.hpp  appframework_terminal.cpp  appframework_terminal.hpp  logs.cpp  sandbox.cpp
src/apf/: all.hpp  args.hpp  common.hpp  file.hpp  logs.hpp  process.hpp  term.hpp  tree.hpp
src/appframework/: common.hpp  files.cpp  files.hpp  ini.cpp  ini.hpp  terminal.cpp  terminal.hpp  types.hpp
tests/: sandbox.cpp  test_args.cpp  test_ini.cpp
tests/files/: test.cpp
tests/tree/: test.cpp
